[project]
name = "veit-schiele"
version = "24.1.0"
description = "Veit Schiele – Ihr Partner bei der Entwicklung von Software"
readme = "README.rst"
authors = [
  { name = "Veit Schiele", email = "veit@cusy.io" },
]
requires-python = ">=3.10"
classifiers = [
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [  ]

optional-dependencies.dev = [
  "pre-commit",
  "veit-schiele[docs]",
]
optional-dependencies.docs = [
  "furo",
  "sphinx-copybutton",
  "sphinx-design",
  "sphinx-sitemap",
  "sphinxext-opengraph",
]
urls."Bug Tracker" = "https://github.com/veit/veit-schiele/issues"
urls."Homepage" = "https://github.com/veit/veit-schiele"

[tool.black]
line-length = 79

[tool.isort]
atomic = true
force_grid_wrap = 0
include_trailing_comma = true
lines_after_imports = 2
lines_between_types = 1
multi_line_output = 3
not_skip = "__init__.py"
use_parentheses = true
